update plugin according to jenkins-team comments: - Update Readme file with description - Remove unused dependencies - Other refactoring